<resources>
    <string name="app_name">Latihan3_Chapter2</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="paswword">Paswword</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="login2">LOGIN</string>
    <string name="login3">Login</string>
    <string name="hello_welcome">Hello, Welcome</string>

</resources>